Pagination, Admin Functionality (User, Book) management implemented